Update DevelopmentServer instructions for Vector API